--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Coda&display=swap');
-.App{
+#home{
     background-color: #7ed957;
     justify-content: center;
     text-align: center;
@@ -80,22 +80,8 @@
 #game{
   justify-content: center;
   text-align: center;
-  background: linear-gradient(-45deg, #23a6d5, #3ce775,  #fc5928, #23d5ab);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
-}
-
-@keyframes gradient {
-  0% {
-      background-position: 0% 50%;
-  }
-  50% {
-      background-position: 100% 50%;
-  }
-  100% {
-      background-position: 0% 50%;
-  }
-  
+  background-image: url(./images/ccc.png);
+  background-repeat: no-repeat;
   
 }
 
@@ -150,4 +136,12 @@ transform: rotateY(180deg);
 
 .match .front {
   background: transparent;
+}
+
+.winImg{ 
+    position: absolute;
+    left: 500px;
+    top: 50px;
+    width: 30%; 
+    height: 100%;
 }
